# arse

./: .gitignore  2
backend/: .env  Cargo.toml  init_db.sh  prepare.sh
backend/.cargo/: config.toml
backend/migrations/: 20260210230246_create_rounds_table.sql  20260212140807_create_users_table.sql
backend/src/: config.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/error/: engine.rs  mod.rs
backend/src/api/response/: admin.rs  mod.rs
backend/src/api/routes/: admin.rs  auth.rs  mod.rs
backend/src/db/: engine.rs  mod.rs  users.rs
backend/src/engine/: mod.rs  service.rs  team.rs
backend/src/engine/checks/: check.rs  mod.rs  random.rs
frontend/: index.html  package-lock.json  package.json
frontend/bindings/: CheckFieldSchema.ts  CheckFieldValue.ts  CheckSchemaResponse.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  api.ts
frontend/src/bindings/: ApiError.ts  ApiResponse.ts  CheckFieldValue.ts
frontend/src/components/: admin-layout.tsx  admin-sidebar.tsx  chart-card.tsx  header.tsx  layout.tsx  login-form.tsx  score-bar-chart.tsx  score-line-chart.tsx  signup-form.tsx  table-card.tsx
frontend/src/components/icons/: more-horizontal.tsx
frontend/src/components/ui/: navigation-menu.tsx  sidebar.tsx
frontend/src/pages/: admin.tsx  configure-scoring.tsx  configure-team-service.tsx  manage-system.tsx  manage-users.tsx  not-found.tsx  overview.tsx  scoreboard.tsx
