[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
axum = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
ts-rs = "12"
serde_json = "1.0.149"

